apps/base/nessie/nessie.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nessie
  labels:
    toolkit.fluxcd.io/tenant: sre-team
